2024-03-01T01:07:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8104930660 # 162
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-01
* notice: last 14d: unq all: 1 19
* notice: prev accum: outdated-unq outdated-all / unq all: 623 1070 / 633 1088
* notice: next accum: outdated-unq outdated-all / unq all: 623 1070 / 633 1089
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-29]

2024-02-29T08:16:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8092960797 # 160
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-29
* notice: last 14d: unq all: 1 18
* notice: prev accum: outdated-unq outdated-all / unq all: 623 1070 / 632 1087
* notice: next accum: outdated-unq outdated-all / unq all: 623 1070 / 633 1088
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-02-29]

2024-02-29T01:00:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8089368291 # 159
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-29
* notice: last 14d: unq all: 1 17
* notice: prev accum: outdated-unq outdated-all / unq all: 623 1070 / 632 1086
* notice: next accum: outdated-unq outdated-all / unq all: 623 1070 / 632 1087
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-02-28]

2024-02-28T08:17:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8077271746 # 157