@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-03-01T01:07:17Z",
+  "timestamp" : "2024-03-01T08:17:36Z",
   "count_outdated" : 1070,
   "uniques_outdated" : 623,
-  "count" : 1089,
-  "uniques" : 633,
+  "count" : 1090,
+  "uniques" : 634,
   "clones" : [
     {
       "timestamp": "2024-02-20T00:00:00Z",
@@ -91,6 +91,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-03-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
