@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 1,
   "clones": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2024-02-29T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-03-01T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
